# docstate

./: .clinerules  README.md  Taskfile.yml  alembic.ini  compose.yaml  docstate_documentation.md  install.sh  pyproject.toml  requirements-dev.txt  setup.py  test_finish_simple.py  tox.ini
doc_new/: __init__.py  docstate.py  document.py  utils.py
doc_new/examples/: rag_async.py
docstate/: README.md  __init__.py  alchemy.py  constants.py  core.py  database.py  docstate.py  document.py  models.py  persistence.py  state_manager.py  utils.py
examples/: basic_example.py  benchmark.py  download.py  rag.py  transaction_and_history_example.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
migrations/: env.py
migrations/versions/: README.md
tests/: conftest.py  fixtures.py  test_additional_coverage.py  test_coverage_improvements.py  test_doc_store.py  test_docstore.py  test_document.py  test_document_error_handling.py  test_document_isolated.py  test_document_pipeline.py  test_edge_cases.py  test_final_coverage.py  test_finish_method.py  test_integration.py  test_persistance.py  test_processing_functions.py  test_utils.py
