[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docstate"
version = "0.1.0"
authors = [
    {name = "DocState Team", email = "info@docstate.example.com"},
]
description = "A library for managing document state transitions in a database"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "sqlalchemy>=2.0.0",
    "alembic>=1.10.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/docstate/docstate"
Issues = "https://github.com/docstate/docstate/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "sphinx>=6.0.0",
]
http = [
    "requests>=2.0.0",
    "aiohttp>=3.0.0",
]
ai = [
    "google-generativeai>=0.3.0",
    "transformers>=4.0.0",
    "langchain>=0.0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[dependency-groups]
dev = [
    "requests>=2.32.3",
]
