[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docstate"
version = "0.0.1"
authors = [
    {name = "DocState Team", email = "info@docstate.example.com"},
]
description = "A library for managing document state transitions in a database"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "Apache 2"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "sqlalchemy>=2.0.0",
    "pydantic>=2.1.0",
    "sqlalchemy-utils>=0.41.2",
]

[project.urls]
Homepage = "https://github.com/docstate/docstate"
Issues = "https://github.com/docstate/docstate/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "session"


[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[dependency-groups]
dev = [
    "requests>=2.32.3",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "sphinx>=6.0.0",
    "pytest-asyncio>=0.26.0",
    "httpx>=0.28.1",
    "langchain-core>=0.3.52",
    "langchain-community>=0.3.21",
    "langchain-postgres>=0.0.14",
    "psycopg2-binary>=2.9.10",
    "langchain-google-vertexai>=2.0.20",
]
